--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "sync": "aws s3 sync ./dist 's3://vishnukerasiya'"
   },
   "dependencies": {
     "@types/react-scroll": "^1.8.7",
+    "axios": "^1.6.7",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.21.2",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
