--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-scroll": "^1.8.7",
     "axios": "^1.6.7",
     "firebase": "^10.1.0",
+    "html-react-parser": "^5.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
