--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.21.2",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
