--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sync": "aws s3 sync ./dist 's3://vishnukerasiya'"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/react-scroll": "^1.8.7",
     "axios": "^1.6.7",
     "firebase": "^10.1.0",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.8.9",
     "use-debounce": "^10.0.0"
