--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,5 +26,7 @@ jobs:
         run: docker pull vishnukerasiya/react-portfolio:latest
       - name: Delete old container
         run: docker rm -f reactjs-app-container
+      - name: Copy nginx.conf into container
+        run: docker cp nginx.conf reactjs-app-container:/etc/nginx/nginx.conf
       - name: Run Docker Container
         run: docker run -d -p 80:80 --name reactjs-app-container vishnukerasiya/react-portfolio
