--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.8.9",
+    "react-social-media-embed": "^2.5.13",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
